...
                                <rect key="frame" x="115" y="592" width="45" height="35"/>
                                <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="17"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#general" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0L-Gc-qnM">
                                                    <rect key="frame" x="40" y="10" width="67" height="24"/>
                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
...
                                <rect key="frame" x="62.5" y="171.5" width="250" height="109"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tni-Gu-a8G">
                                        <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
                                        <constraints>
...
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O4R-Fa-sa1">
                                        <rect key="frame" x="0.0" y="62" width="250" height="30"/>
                                        <constraints>
...
                                <rect key="frame" x="80" y="370.5" width="215" height="30"/>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="13"/>
                                <state key="normal" title="Don't have an account? Sign up here"/>
                                <connections>
                                    <action selector="createAccountBtnPressed:" destination="Dq3-no-q4x" eventType="touchUpInside" id="zBo-Id-Oxb"/>
...
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3c-Ba-cta">
                                        <rect key="frame" x="0.0" y="62" width="250" height="30"/>
                                        <constraints>
...
                                <rect key="frame" x="136" y="430" width="103" height="30"/>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="13"/>
                                <state key="normal" title="Choose an Avatar"/>
                                <connections>
                                    <action selector="createAccountBtnPressed:" destination="Dq3-no-q4x" eventType="touchUpInside" id="12m-es-A5h"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
                                <state key="normal" title="Create Account">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <rect key="frame" x="107" y="465" width="161" height="30"/>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="13"/>
                                <state key="normal" title="Generate background color"/>
                                <connections>
                                    <action selector="createAccountBtnPressed:" destination="Dq3-no-q4x" eventType="touchUpInside" id="wrS-3y-hLw"/>
...
                                            <constraint firstAttribute="height" constant="20" id="zPz-3g-QpF"/>
                                        </constraints>
                                        <state key="normal" image="smackBurger"/>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q17-ly-73h">
...
